--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
-.row {
-  display: flex;
-  flex-direction: row;
+table {
+  border-collapse: collapse;
+  text-align: center;
+  vertical-align: middle;
+}
+
+th,
+td {
+  border: 1px solid black;
+  padding: 8px;
+}
+
+.map {
+  width: 3rem;
+}
+
+.map:hover {
+  background-color: gray;
+  cursor: pointer;
 }
