--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,14 @@ td {
   background-color: gray;
   cursor: pointer;
 }
+
+ul.navbar {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  gap: 1rem;
+}
+
+.nav-item {
+  text-decoration: none;
+}
