--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* .app-container {
+.app-container {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -10,12 +10,18 @@ table {
   width: 100%;
 }
 
-th,
+th {
+  border: 1px solid #ffffff;
+  text-align: center;
+  padding: 5px;
+  font-size: 11px;
+}
+
 td {
   border: 1px solid #ffffff;
   text-align: left;
   padding: 5px;
-  font-size: 16px;
+  font-size: 11px;
 }
 
 th {
@@ -38,19 +44,8 @@ form td:last-child {
 
 form * {
   font-size: 28px;
-} */
-
-table {
-  border-collapse: collapse;
-  text-align: center;
-  vertical-align: middle;
 }
 
-th,
-td {
-  border: 1px solid black;
-  padding: 8px;
-}
 
 .map {
   width: 3rem;
