--- a/src/comapping/Coapp.css
+++ b/src/comapping/Coapp.css
@@ -17,18 +17,18 @@
 }
 
 .coapp-container th,
-.coapp-container .td {
+.coapp-container td {
   border: 1px solid #ffffff;
   text-align: center;
   padding: 4px;
   font-size: 11px;
 }
 
-.coapp-container .th {
+.coapp-container th {
   background-color: rgb(117, 201, 250);
 }
 
-.coapp-container .td {
+.coapp-container td {
   background-color: rgb(205, 235, 253);
 }
 
@@ -85,7 +85,7 @@ body {
 
 .codatamodalContainer {
   width: 400px;
-  height: 450px;
+  height: 675px;
   border-radius: 10px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -179,7 +179,7 @@ body {
 
 .cointmodalContainer {
   width: 600px;
-  height: 530px;
+  height: 560px;
   border-radius: 10px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
