--- a/src/peopomapping/Peopomapping.css
+++ b/src/peopomapping/Peopomapping.css
@@ -17,18 +17,18 @@
   }
   
   .peopoapp-container th,
-  .peopoapp-container .td {
+  .peopoapp-container td {
     border: 1px solid #ffffff;
     text-align: left;
     padding: 4px;
     font-size: 11px;
   }
   
-  .peopoapp-container .th {
+  .peopoapp-container th {
     background-color: rgb(117, 201, 250);
   }
   
-  .peopoapp-container .td {
+  .peopoapp-container td {
     background-color: rgb(205, 235, 253);
   }
   
@@ -84,7 +84,7 @@
   
   .peopointmodalContainer {
     width: 600px;
-    height: 330px;
+    height: 380px;
     border-radius: 10px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
